certmanager-lab/manifests/minha-app-external-dns/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minha-app-external-dns
spec:
  selector:
    app: minha-app-external-dns
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
